--- a/app/styles/inputs.styl
+++ b/app/styles/inputs.styl
@@ -5,19 +5,26 @@
 	border-radius 50px
 	overflow hidden
 	display flex
+	position relative
 	input
 		padding 10px 20px
 		flex 1
 		color #868686
 		font-family 'Montserrat', sans-serif
-	i
+	.search-icon
 		background #85d78d
 		// padding 8px 20px 12px 16px
 		padding 10px 15px 10px 10px
 		color white
 		cursor pointer
 		font-size 1.35em
-		
+	.closed
+		position: absolute;
+		right: 65px;
+		color: #aaa;
+		top: 10px;
+		cursor pointer
+
 .am-Search-input2
 	border-radius 50px
 	overflow hidden
