--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -71,15 +71,15 @@
 			{% endif %}
 				<tr>
 					<td></td>
-					<td><a href="/works/category/all/page-1/?order=popularity">OBRAS</a></td>
+					<td><a href="/works/category/all/page-1">OBRAS</a></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="/users/specialty/all/page-1?order=popularity">ARTISTAS</a></td>
+					<td><a href="/users/specialty/all/page-1">ARTISTAS</a></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="/collections/category/all/page-1?order=popularity">COLECCIONES</a></td>
+					<td><a href="/collections/category/all/page-1">COLECCIONES</a></td>
 				</tr>
 			{% if user %}
 				<tr>
