--- a/app/views/partials/elements/notification-review.html
+++ b/app/views/partials/elements/notification-review.html
@@ -8,7 +8,7 @@
         </a>
         <div class="info">
           <a href="/user/<%=User.username%>" class="name"><%= User.fullname %></a>
-          <p class="u-margin-top-5">ha <strong>hecho un review</strong></p>
+          <p class="u-margin-top-5">ha <strong>hecho un comentario</strong></p>
         </div>
         <div class="time"><i class="bi_interface-clock"></i> <span><%=formatDate(createdAt)%></span></div>
       </header>
