--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -183,7 +183,7 @@
 						<p class="subtitle u-margin-top-20">Todo es válido, descubre el arte que más te guste <br> y gúardalo en tus colecciones.</p>
 						<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
 						<br>
-						<a href="/works/category/all/page-1/?order=popularity" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
+						<a href="/works/category/all/page-1" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
 					</div>
 				</div>
 			</p>
@@ -195,7 +195,7 @@
 						<p class="subtitle u-margin-top-20">Coleccionar es divertido y gratis! <br> Tu también puedes hacerlo.</p>
 						<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
 						<br>
-						<a href="/works/category/all/page-1/?order=popularity" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
+						<a href="/works/category/all/page-1" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
 					</div>
 				</div>
 
@@ -213,7 +213,7 @@
 		<div class="grid-100 grid-parent">
 			{% if owner %}
 				<!-- <p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no sigues a ningun artista <br><br>
-					<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
+					<a href="/users/specialty/all/page-1">Descubre y empieza a seguir tu primer artista</a>
 				</p> -->
 				<div class="empty-box bare-message hide">
 					<!-- <div class="empty-box-column left">
@@ -255,7 +255,7 @@
 
 			{% if owner %}
 				<!-- <p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Este usuario aún no tiene seguidores<br><br>
-					<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
+					<a href="/users/specialty/all/page-1">Descubre y empieza a seguir tu primer artista</a>
 				</p> -->
 				<div class="empty-box bare-message hide">
 					<!-- <div class="empty-box-column left">
