--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -48,10 +48,10 @@
 					</div>
 				</div>
 				<div class="text navigation" style="text-align: center;">
-					<span class="am-navigation-text uppercase category-text"></span>
-					<span class="am-navigation-text uppercase order-text"></span>
-					<span class="am-navigation-text uppercase search-text hide"></span>
-					<span class="am-navigation-text uppercase featured-text hide"></span>
+					<span class="am-navigation-text uppercase category-text" id="category"></span>
+					<span class="am-navigation-text uppercase order-text" id="order"></span>
+					<span class="am-navigation-text uppercase search-text hide" id="term"></span>
+					<span class="am-navigation-text uppercase featured-text hide" id="featured"></span>
 				</div>
 				<div class="filter right" data-state="closed">
 					<div class="am-Select">
