--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -26,9 +26,9 @@
               {% if user %}
                 <a href="/feed" class="feed-menu">ART FEED</a>
               {% endif %}
-							<a href="/works/category/all/page-1/?order=popularity" class="works-menu">OBRAS</a>
-							<a href="/users/specialty/all/page-1?order=popularity" class="users-menu">ARTISTAS</a>
-							<a href="/collections/category/all/page-1?order=popularity" class="collections-menu">COLECCIONES</a>
+							<a href="/works/category/all/page-1" class="works-menu">OBRAS</a>
+							<a href="/users/specialty/all/page-1" class="users-menu">ARTISTAS</a>
+							<a href="/collections/category/all/page-1" class="collections-menu">COLECCIONES</a>
 						</ul>
 					{% if user %}
 						<ul class="socials">
