--- a/app/views/partials/banner.html
+++ b/app/views/partials/banner.html
@@ -9,7 +9,7 @@
 					<p class="am-DiscoverTitle-text u-padding-bottom-15 u-text-center">{{ bannerTitle }}</p>
 					<div class="am-Search-input">
 						<input type="text"/>
-						<i class="closed fa fa-times"></i>
+						<i class="close-btn closed fa fa-times"></i>
 						<!-- <i class="fa fa-search"></i> -->
 						<i class="search-icon bi_interface-search search-btn"></i>
 					</div>
