add new loading to feed and notification

--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -86,7 +86,8 @@
 			<div class="title">Todavía no sigues a nadie, pero te sugerimos a los últimos artistas destacados de AM</div>
 		</div> -->
 		<div class="feed-inner">
-			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			<div class="loader extra-small gray loading hide"></div>
 		</div>
 	</div>
 
