--- a/app/views/user/notifications.html
+++ b/app/views/user/notifications.html
@@ -5,6 +5,9 @@
 	<div class="notifications">
 		<div class="inner">
 			<p class="notifications-title">TUS NOTIFICACIONES</p>
+
+			<div class="loader extra-small gray loading hide"></div>
+
 			<div class="notifications-container">
 			</div>
 		</div>
