--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -353,6 +353,9 @@
 			<div class="share share-tw">
 				<i class="fa fa-twitter"></i>Compartir en twitter
 			</div>
+			<div class="share share-tw">
+				Copiar link
+			</div>
 		</div>
 	</div>
 
