add copy link in share options

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -353,7 +353,7 @@
 			<div class="share share-tw">
 				<i class="fa fa-twitter"></i>Compartir en twitter
 			</div>
-			<div class="share share-tw">
+			<div class="share copy">
 				Copiar link
 			</div>
 		</div>
