--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3099,6 +3099,11 @@ white = #fff
 			align-items center
 			justify-content center
 			margin-right 15px
+		&.copy
+			justify-content: center;
+			border: solid 1px gray;
+			border-radius: 5px;
+			padding: 10px;
 
 .more-carousel
 	height: 240px;
