--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -17,6 +17,11 @@
   							<input type="text" class='search-box-value' placeholder="Buscar"/>
   							<i class="bi_interface-search search-btn"></i>
   						</div>
+  						<ul class="search-options">
+  							<li class="search-option">Buscar en productos: “<strong>gatos</strong>”</li>
+  							<li class="search-option">Buscar en obras: “<strong>gatos</strong>”</li>
+  							<li class="search-option">Buscar en artistas: “<strong>gatos</strong>”</li>
+  						</ul>
             </form>
 					</div>
 				</div>
