--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -143,7 +143,9 @@
 				<br><br>
 				<a href="/users/specialty/all/page-1" class="am-report-link blue" href="">Volver a todas los artistas</a>
 			</div>
-			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			<div class="loader extra-small gray loading hide"></div>
+
 		</div>
 	</div>
 
@@ -180,7 +182,8 @@
 				<br><br>
 				<a href="/works/category/all/page-1" class="am-report-link blue" href="">Volver a todas las obras</a>
 			</div>
-			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			<div class="loader extra-small gray loading hide"></div>
 		</div>
 	</div>
 
