--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -14,13 +14,13 @@
 					<div class="search">
             <form class="search-box">
   						<div class="am-Search-input2">
-  							<input type="text" class='search-box-value' placeholder="Buscar"/>
-  							<i class="bi_interface-search search-btn"></i>
+  							<input type="text" class='search-box-value general-search' placeholder="Buscar"/>
+  							<i class="bi_interface-search search-btn search-general-btn"></i>
   						</div>
-  						<ul class="search-options">
-  							<li class="search-option">Buscar en productos: “<strong>gatos</strong>”</li>
-  							<li class="search-option">Buscar en obras: “<strong>gatos</strong>”</li>
-  							<li class="search-option">Buscar en artistas: “<strong>gatos</strong>”</li>
+  						<ul class="search-options hide general-search-options">
+  							<li class="search-option">Buscar en obras <strong class="works"></strong></a></li>
+  							<li class="search-option"><a>Buscar en artistas <strong class="users"></strong></a></li>
+                <li class="search-option"><a>Buscar en colecciones <strong class="collections"></strong></a></li>
   						</ul>
             </form>
 					</div>
