--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -18,7 +18,7 @@
   							<i class="bi_interface-search search-btn search-general-btn"></i>
   						</div>
   						<ul class="search-options hide general-search-options">
-  							<li class="search-option">Buscar en obras <strong class="works"></strong></a></li>
+  							<li class="search-option"><a>Buscar en obras <strong class="works"></strong></a></li>
   							<li class="search-option"><a>Buscar en artistas <strong class="users"></strong></a></li>
                 <li class="search-option"><a>Buscar en colecciones <strong class="collections"></strong></a></li>
   						</ul>
