change order in profile

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -39,7 +39,7 @@
 						<ul class="socials">
 							<a href="/user/{{user.username}}/work/add" class="upload">SUBIR</a>
 							<a href="/user/{{user.username}}/notifications" class="am-Header-icon">
-								<i class="fa fa-bell-o"></i><span>2</span> &nbsp;
+								<i class="fa fa-bell-o"></i><span>{{numOfNotifications}}</span> &nbsp;
 							</a>
 							<!-- <a href="#" class="notif"></a> -->
 							<!-- <a href="#" class="cart"></a> -->
