--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -138,6 +138,7 @@
 	  };
 	</script>
 	<script src="/adapt.min.js"></script>
+	<script src="/clipboard.min.js"></script>
 	<script src="/EventDispatcher.js"></script>
 	<script src="/jquery-2.1.1.min.js"></script>
 	<script src="/hammer.min.js"></script>
