correction click in options searc

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -574,16 +574,18 @@ white = #fff
 			z-index 1
 			background white
 			font-family 'Montserrat', sans-serif
-			color #9b9b9b
 			font-size 11px
 			.search-option
-				padding 10px
 				border-bottom solid 1px #979797
 				border-left solid 1px #979797
 				border-right solid 1px #979797
 				cursor pointer
-				strong
-					color #333
+				a
+					color #9b9b9b
+					padding 10px
+					display block
+					strong
+						color #333
 
 	.options
 		font-family 'Montserrat', sans-serif
