--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -41,6 +41,7 @@
 
 	<div class="discover-content grid-container u-padding-top-10 u-padding-bottom-40">
 		<div class="grid-100 grid-parent">
+			<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
 			<div class="grid work-layout-discover">
 				<div class="grid-sizer"></div>
 			</div>
