add notifications number in mobile menu

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -88,7 +88,7 @@
 				</tr>
 				<tr>
 					<td><i class="bi_interface-bell-a"></i></td>
-					<td><a href="/user/{{user.username}}/notifications">NOTIFICACIONES</a></td>
+					<td><a href="/user/{{user.username}}/notifications">NOTIFICACIONES <span>29</span></a></td>
 				</tr>
 			{% endif %}
 			</table>
