--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -181,6 +181,7 @@
 	var successMessage = {{successMessage|json|safe}};
 	var user = {{user|json|safe}};
 	$(function() {
+		// console.log(new APP.BaseScreen('product'));
 		new APP.AM();
 	});
 	</script>
