--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -618,6 +618,9 @@ white = #fff
 		img
 			border-radius 50%
 			margin-right 2px
+			width 40px
+			height 40px
+
 		i
 			font-size .8em
 		&:hover
