add landing page in feed view

--- a/app/styles/utilities.styl
+++ b/app/styles/utilities.styl
@@ -19,6 +19,10 @@
 	margin-top 40px
 .u-margin-top-60
 	margin-top 60px
+.u-margin-top-80
+	margin-top 80px
+.u-margin-top-130
+	margin-top 130px
 
 .u-padding-top-10
 	padding-top 10px
