--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4138,6 +4138,215 @@ white = #fff
 					font-size 11px
 
 
+
+/*------------------------------------*
+	$ LADING
+*------------------------------------*/
+.lading-banner-container
+	background charcoal-grey
+.lading-banner
+	display flex
+	align-items flex-end
+	.info
+	.images
+		flex 1
+		padding 20px
+		padding-bottom 0
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 48px
+		color white
+		line-height 1.15
+	.subtitle
+		font-family: 'PT Serif', serif;
+		font-size 19px
+		color rgba(white, .69)
+		line-height 1.5
+		padding-right 40px
+	.button
+		display inline-block
+		padding 15px 50px
+		letter-spacing 2px
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		background #276cf2
+		border-radius 40px
+		font-size 11px
+		color white
+		margin-bottom 170px
+	.images
+		img
+			height 600px
+
+.landing-screens
+	padding-top 60px
+	padding-bottom 70px
+	max-width 1100px
+	margin auto
+	>.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 55px
+		color charcoal-grey
+		text-align center
+		max-width 700px
+		margin auto
+	.subtitle
+		text-align center
+		font-family: 'PT Serif', serif;
+		font-size 21px
+		color #656b6f
+	.screens
+		display flex
+		margin-top 60px
+		.screen
+			flex 1
+			max-width 270px
+			margin auto
+		img
+			margin auto
+			display block
+		.title
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			font-size 12px
+			color charcoal-grey
+			letter-spacing 2px
+			text-align center
+			margin-top 20px
+		.description
+			font-family: 'PT Serif', serif;
+			font-size 15px
+			color #656b6f
+			line-height 1.5
+			margin-top 10px
+			text-align center
+
+.lading-explanation
+	display flex
+	max-width 1100px
+	margin auto
+	padding-top 80px
+	padding-bottom 130px
+	>.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 52px
+		color charcoal-grey
+		line-height 1.1
+		flex 1
+		padding 20px
+	>.description
+		flex 1
+		padding 20px
+		.title
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			font-size 11px
+			color #474747
+			letter-spacing 2px
+		.description
+			font-family: 'PT Serif', serif;
+			font-size 18px
+			color #656b6f
+			margin-top 20px
+			line-height 1.35
+			max-width 430px
+
+.lading-features-container
+	background #277cea
+	padding-top 80px
+
+.lading-features-options
+	>.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 34px
+		color #eee
+
+	.options
+		display flex
+		flex-wrap wrap
+
+	.option
+		width 50%
+		display flex
+		margin-top 25px
+		margin-bottom 25px
+		.option-right
+			max-width 180px
+		.title
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			color #eee
+			font-size 10px
+			letter-spacing 2px
+			margin-top 10px
+		.description
+			font-size 13px
+			font-family: 'PT Serif', serif;
+			color #eee
+			margin-top 10px
+			line-height 1.35
+
+.landing-reviews
+	padding-top 90px
+	padding-bottom 90px
+	max-width 1050px
+	margin auto
+	.review
+		display flex
+		.img
+			width 212px
+			height 212px
+			border-radius 50%
+			margin-right 80px
+		.content
+			.text
+				font-family: 'PT Serif', serif;
+				font-size 32px
+				color #3b3d40
+				line-height 1.3
+			.avatar
+				display flex
+				margin-top 50px
+				align-items center
+				.logo
+					margin-right 15px
+				.info
+					.name
+						font-family: 'Montserrat',sans-serif;
+						font-weight bold
+						font-size 11px
+						color charcoal-grey
+						letter-spacing 2px
+					.description
+						font-family: 'PT Serif', serif;
+						font-size 14px
+						color #656b6f
+						margin-top 5px
+
+.landing-partners
+	padding 90px 0
+	max-width 1050px
+	margin auto
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 11px
+		color charcoal-grey
+		letter-spacing 2px
+		text-align center
+	.partners
+		display flex
+		align-items center
+		justify-content space-between
+		margin-top 40px
+
+
+
+
 @keyframes load
 	0%
 		transform rotate(0)
