add links to artists in home banners

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -53,11 +53,11 @@
 					</a>
 				</div>
 				<div class="home-grid-column tablet">
-					<a href="#" class="home-grid-element">
+					<a href="http://artemanifiesto.com/user/cristhianhova/" class="home-grid-element">
 						<div class="cover"></div>
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065550/general/home-gid-image-3.jpg">
 					</a>
-					<a href="#" class="home-grid-element">
+					<a href="http://artemanifiesto.com/users/specialty/all/page-1" class="home-grid-element">
 						<div class="cover"></div>
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065549/general/home-gid-image-4.jpg">
 					</a>
