--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -137,6 +137,7 @@
 	    ]
 	  };
 	</script>
+	<script src="/js.cookie.js"></script>
 	<script src="/adapt.min.js"></script>
 	<script src="/clipboard.min.js"></script>
 	<script src="/EventDispatcher.js"></script>
@@ -174,17 +175,28 @@
 
 	{% include 'elements/review.html' %}
 	{% include 'elements/filterItem.html' %}
+	
 	<script>
 	var owner = {{owner|json|safe}};
 	var path = {{path|json|safe}};
 	var errorMessage = {{errorMessage|json|safe}};
 	var successMessage = {{successMessage|json|safe}};
 	var user = {{user|json|safe}};
-	$(function() {
-		// console.log(new APP.BaseScreen('product'));
-		new APP.AM();
-	});
+	$(function() {new APP.AM();});
 	</script>
+
+	{% if env === 'production' %}
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-70917306-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+	{% endif %}
+
 	{% block scripts %} {% endblock %}
 </body>
 </html>
