--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -1,177 +1,121 @@
 {% extends '../partials/base.html' %}
-{% set path = '' %}
+{% set path = 'feed' %}
 {% block elements %}
 
-	<div class="lading-banner-container">
-		<div class="grid-container">
-			<div class="grid-100">
-				<div class="lading-banner">
+	<a id="go-collection-modal" href="#collection-modal"></a>
+	<a id="go-share-modal" href="#share-modal"></a>
+
+	<div id="collection-modal" style="display:none;">
+		<i class="closed-modal fa fa-times"></i>
+		<div class="actions-box add-collection">
+			<p class="title">Añadir a las colecciones</p>
+			<div class="u-separator u-margin-top-7"></div>
+
+			<form class="add-collection-form">
+				<input class="u-margin-top-10" type="text" name='name' required placeholder="Crear una colección nueva">
+				<button class="u-margin-top-10 color-black bg-gray wd-auto">AÑADIR</button>
+			</form>
+			<ul class="collections u-margin-top-20">
+			</ul>
+			<div class="u-separator u-margin-top-20"></div>
+			<div class="buttons u-margin-top-20">
+				<button class="wd-auto bg-blue color-white save-collections">GUARDAR</button>
+				<div class="hide save-collections-loading">
+					<button class="wd-auto bg-blue color-white">
+						<i class="load fa fa-spinner"></i>
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="share-modal" style="display:none;">
+		<i class="closed-modal fa fa-times"></i>
+		<div class="actions-box social-share">
+			<p class="title">Compartir obras</p>
+			<div class="u-separator u-margin-top-7"></div>
+			<div class="share share-fb">
+				<i class="fa fa-facebook"></i>Compartir en facebook
+			</div>
+			<div class="share share-tw">
+				<i class="fa fa-twitter"></i>Compartir en twitter
+			</div>
+			<div class="share copy">
+				Copiar link
+			</div>
+		</div>
+	</div>
+
+	<div class="feed">
+		<div class="feed-title">
+			<div class="title">ART FEED</div>
+			<div class="u-separator" style="background: #eee;"></div>
+			<div class="user-info">
+				<div class="avatar">
+					<img src="{{user.photo}}">
 					<div class="info">
-						<p class="title u-margin-top-130">Una plataforma para artistas visuales y almas independientes</p>
-						<p class="subtitle u-margin-top-40">Una red social y marketplace para artistas visuales para mostrar, descubrir, comprar y vender tus obras y creaciones.</p>
-						<a href="#" class="button u-margin-top-80">REGÍSTRATE AHORA</a>
+						<p class="name uppercase">
+							{% if user.typeName === 1 %}
+								{{user.fullname}}
+							{% else %}
+								{{user.pseudonimo}}
+							{% endif %}
+						<p class="city u-margin-top-5">{{user.city}}, {{user.country}}</p>
 					</div>
-					<div class="images">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450087317/general/lading-phones.png">
-					</div>
+				</div>
+				<div class="stats">
+					<a href="/user/{{user.username}}/followers">
+						<div class="stat">
+							<p>{{numbers[0]}}</p>
+							<p class="u-margin-top-7">seguidores</p>
+						</div>
+					</a>
+					<a href="/user/{{user.username}}/">
+						<div class="stat">
+							<p>{{numbers[1]}}</p>
+							<p class="u-margin-top-7">obras</p>
+						</div>
+					</a>
+					<a href="/user/{{user.username}}/followings">
+						<div class="stat">
+							<p>{{numbers[2]}}</p>
+							<p class="u-margin-top-7">siguiendo</p>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
-	</div>
-
-	<div class="grid-container">
-		<div class="grid-100">
-			<div class="landing-screens">
-				<p class="title">Un portafolio para todos tus dispositivos</p>
-				<p class="subtitle u-margin-top-25">Tu arte en todas tus pantallas</p>
-				<div class="screens">
-					<div class="screen">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450156492/general/landing-screen-phone.svg">
-						<p class="title">SMARTPHONE</p>
-						<p class="description">Ahora es tu herramienta de trabajo, no pierdas una oportunidad de mostrar tu arte o de descubrir nuevos talentos.</p>
-					</div>
-					<div class="screen">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450156492/general/landing-screen-tablet.svg">
-						<p class="title">TABLET</p>
-						<p class="description">Nunca fue más facil ser portable, actualiza, muestra y descubre en cualquier lugar, estés donde estés</p>
-					</div>
-					<div class="screen">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450156492/general/landing-screen-desktop.svg">
-						<p class="title">DESKTOP</p>
-						<p class="description">Trabaja a máxima resolución y visualiza a pantalla completa tu portafolio o el de otros artistas como tú</p>
-					</div>
-				</div>
-			</div>
+		<!-- <div class="feed-title" style="margin-top: 20px;">
+			<div class="title">Todavía no sigues a nadie, pero te sugerimos a los últimos artistas destacados de AM</div>
+		</div> -->
+		<div class="feed-inner">
+			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			<div class="loader extra-small gray loading hide"></div>
 		</div>
 	</div>
 
-	<div class="grid-container">
-		<div class="grid-100">
-			<div class="lading-explanation">
-				<p class="title">La conexión con tu creatividad a sólo unos clicks</p>
-				<div class="description">
-					<p class="title">¿POR QUE ESTAR EN ARTEMANIFIESTO?</p>
-					<p class="description">Sabemos que tienes mucho que expresar. Hemos puesto a la tecnología de tu lado para que puedas mostrar tu talento al mundo  con una experiencia visual única. Únete a los 1500 artistas en nuestra primera red social para artistas</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-	<div class="lading-features-container">
-		<div class="grid-container">
-			<div class="grid-50">
-				<div class="lading-features-image">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158448/general/landing-feature-1-img.svg">
-				</div>
-			</div>
-			<div class="grid-50">
-				<div class="lading-features-options">
-					<p class="title">Una plataforma a tu medida</p>
-					<div class="options">
-						<div class="option">
-							<div class="option-left">
-								<i class="bi_interface-arrow-right"></i>
-							</div>
-							<div class="option-right">
-								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-1.svg">
-								<p class="title">CREA  TU PORTAFOLIO</p>
-								<p class="description">Es muy fácil y gratis! Sólo tienes que subir tu trabajo</p>
-							</div>
-						</div>
-						<div class="option">
-							<div class="option-left">
-								<i class="bi_interface-arrow-right"></i>
-							</div>
-							<div class="option-right">
-								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-2.svg">
-								<p class="title">VALORA Y COLECCIONA</p>
-								<p class="description">Reconoce los trabajos y guárda los que más te gusten</p>
-							</div>
-						</div>
-						<div class="option">
-							<div class="option-left">
-								<i class="bi_interface-arrow-right"></i>
-							</div>
-							<div class="option-right">
-								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-3.svg">
-								<p class="title">DESCUBRE NUEVO ARTE</p>
-								<p class="description">Descubre entre 5,000 obras y 1500 artistas</p>
-							</div>
-						</div>
-						<div class="option">
-							<div class="option-left">
-								<i class="bi_interface-arrow-right"></i>
-							</div>
-							<div class="option-right">
-								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-4.svg">
-								<p class="title">SIGUE A TUS ARTISTAS</p>
-								<p class="description">Y manténte al tanto de sus últimas creaciones</p>
-							</div>
-						</div>
-						<div class="option">
-							<div class="option-left">
-								<i class="bi_interface-arrow-right"></i>
-							</div>
-							<div class="option-right">
-								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-5.svg">
-								<p class="title">ART FEED</p>
-								<p class="description">Llena de arte tus pantallas con los artistas que te gustan</p>
-							</div>
-						</div>
-						<div class="option">
-							<div class="option-left">
-								<i class="bi_interface-arrow-right"></i>
-							</div>
-							<div class="option-right">
-								<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158371/general/lading-feature-6.svg">
-								<p class="title">TIENDA EN LÍNEA</p>
-								<p class="description">Compra y vende arte original, o crea productos por internet</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="grid-container">
-		<div class="grid-100">
-			<div class="landing-reviews">
-				<div class="review">
-					<img class="img" src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450253893/general/landing-review-img-1.jpg"></img>
-					<div class="content">
-						<p class="text">“Vengo siguiendo la plataforma hace 3 años, y me ayudó a difundir mi portafolio en redes sociales de manera muy intuitiva, es un trampolín al artista”</p>
-						<div class="avatar">
-							<img class="logo" src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450254017/general/landing-review-logo-1.jpg">
-							<div class="info">
-								<p class="name">CHRISTIAN HOVA</p>
-								<p class="description">Ilustrador y publicista</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="grid-container">
-		<div class="grid-100">
-			<div class="landing-partners">
-				<p class="title">CONFÍAN EN NOSOTROS</p>
-				<div class="partners">
-					<img class="partner" src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450254831/general/lading-partner-1.jpg">
-					<img class="partner" src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450254831/general/lading-partner-2.jpg">
-					<img class="partner" src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450254831/general/lading-partner-3.jpg">
-					<img class="partner" src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450254831/general/lading-partner-4.jpg">
-				</div>
-			</div>
-		</div>
-	</div>
-
+	<div id="fb-root"></div>
 
 {% endblock %}
 
 
 {% block scripts %}
+	<script>
+	var actions = {{data|json|safe}};
+	(function (d, s, id) {
+		var js;
+		var fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s);
+		js.id = id;
+		js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=" + DataApp.fbAppID;
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
+
+	$(function() {
+	  $('#go-collection-modal').leanModal();
+	  $('#go-share-modal').leanModal();
+		new APP.FeedScreen();
+	})
+	</script>
 {% endblock %}
