--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -32,7 +32,7 @@
     $(function () {
         var editor = new MediumEditor('.editable', {
             buttonLabels: 'fontawesome',
-            toolbar: false
+            toolbar: false,
             spellcheck: false,
             disableEditing: true
         });
