target blank true and imagedragging false

--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -60,6 +60,8 @@
 
         var editor = new MediumEditor('.editable', {
             buttonLabels: 'fontawesome',
+            targetBlank: true,
+            imageDragging: false,
             toolbar: {
               buttons: ['h2', 'h3', 'bold', 'italic', 'underline', 'strikethrough', 'quote', 'anchor', 'justifyLeft', 'justifyCenter', 'justifyRight', 'justifyFull','orderedlist', 'unorderedlist']
             }
