--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Creator</title>
     <link rel="stylesheet" href="/demo.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css">
     <link rel="stylesheet" href="/default.css">
     <link rel="stylesheet" href="/medium-editor-insert-plugin.css">
@@ -16,7 +16,7 @@
 
     <div class="editable">
       {% if post %}
-        {{post.body|safe}}
+        {{postBody|safe}}
       {% endif %}
     </div>
 </div>
@@ -28,7 +28,8 @@
 <!-- <script src="/medium-editor-insert-plugin.js"></script> -->
 
 <script>
-    var post = {{post|json|safe}} || null;
+  var post = {{post|json|safe}};
+  console.log(post);
     $(function () {
         var editor = new MediumEditor('.editable', {
             buttonLabels: 'fontawesome',
